<resources>
    <string name="app_name">NARI</string>
    <string name="userID">User ID</string>
    <string name="pass">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="reg">Register</string>
    <string name="confirm">Confirm</string>
    <string name="pin">PIN</string>
    <string name="confirmPin">Confirm PIN</string>
    <string name="calendar">Calendar</string>
    <string name="information">Knowledge Hub</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="maps">Maps</string>
    <string name="feed">Feed</string>
    <string name="post">POST</string>
    <string name="post_hint">Write your post here…</string>
    <string name="comment_hint">Write your comment here…</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="back">Back</string>
    <string name="registerMsg">Don\'t have an account? Register</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="dislike">Dislike</string>
    <string name="sampleLikeCount">10</string>
    <string name="sampleDislikeCount">5</string>
    <string name="sampleCommentCount">20</string>
    <string name="sampleText">This is a sample Text. This is a sample Text.</string>
    <string name="samplePostContent">This is a sample post content.</string>
    <string name="sampleCommentContent">This is a sample comment content.</string>
    <string name="selectLastPeriodDate">Select Last Period Date: </string>
    <string name="selectedDate">Selected Date: %1$s</string>
    <string name="period_start_date">Period Start Date</string>
    <string name="period_end_date">Period End Date</string>
    <string name="today_date">Today Date</string>
    <string name="today_notes">Today notes</string>
    <string name="add_dates">Add Dates</string>
    <string name="confirm_dates">Confirm Dates</string>
    <string name="delete_dates">Delete Dates</string>
    <string name="period_pain">Period Pain</string>
    <string name="period">Period</string>
    <string name="learn_more">Learn about how to manage pain during your menstrual cycle.</string>
    <string name="period_today">You might have period today!</string>
    <string name="ovulating_today">You might be ovulating today!</string>
    <string name="no_alert_today">No Alert Today</string>
    <string name="channel_name">NARI Reminder</string>
    <string name="channel_description">Notifications about period and ovulation days</string>
    <string name="notification_title">NARI Reminder</string>
    <string name="talk_to_chatbot">Talk to Chatbot</string>
    <string name="period_ovulation_calendar">Period/Ovulation Calendar</string>
    <string name="log_symptomps">Log Symptomps</string>
    <string name="add_period_dates">Add Period Dates</string>

</resources>