<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="64sp"
        android:layout_gravity="center"
        android:layout_marginTop="60sp"
        android:layout_marginBottom="16sp"
        android:padding="10sp"
        android:fontFamily="@font/righteousregular"
        android:textColor="@color/md_theme_light_primary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userID"
        android:padding="10sp"
        android:layout_marginTop="60sp"
        app:endIconMode="clear_text"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20sp"
        android:hint="@string/pass"
        android:padding="10sp"

        app:hintTextAppearance="@string/pass"
        app:passwordToggleEnabled="true"
        android:inputType="textPassword"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
