<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">
    <TextView
        android:id="@+id/skipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SKIP"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:textColor="?android:colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="64sp"
        android:layout_gravity="center"
        android:layout_marginTop="60sp"
        android:layout_marginBottom="16sp"
        android:padding="10sp"
        android:fontFamily="@font/righteousregular"
        android:textColor="?android:colorPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin"
        android:padding="10sp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20sp"
        app:counterEnabled="true"
        app:counterMaxLength="4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPin"
        android:padding="10sp"
        app:passwordToggleEnabled="true"

        app:counterEnabled="true"
        app:counterMaxLength="4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPinField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"/>

</LinearLayout>
