<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <!-- Top Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/colorBackground"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="?android:attr/textColorPrimary"
        android:layout_marginBottom="20sp">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_back"
            android:background="?android:attr/colorBackground"
            android:padding="10dp"/>

        <!-- Title -->
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/dividerHorizontal" />


    <!-- First Setting Item -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:id="@+id/themeSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary" />

        <ImageView
            android:id="@+id/iconSetting1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dropdown"
            android:contentDescription="@string/theme"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/dividerHorizontal" />

    <!-- Second Setting Item -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:id="@+id/logoutSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary" />

        <ImageView
            android:id="@+id/iconSetting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logout"
            android:contentDescription="@string/logout"/>
    </LinearLayout>
</LinearLayout>
